--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -1,4 +1,4 @@
-name: artifacts-build
+name: stagex-build
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: build artifacts
+    name: stagex build+push
     # We use a special group that is configured to use github largest runner instance
     # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
     runs-on:
@@ -19,9 +19,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: qos_client.tar
-          - target: qos_host.tar
-          - target: qos_enclave.tar
+          - target: qos_client
+          - target: qos_host
+          - target: qos_enclave
     permissions:
       id-token: write
       contents: read
@@ -29,30 +29,39 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
       - name: Setup Docker
         uses: ./.github/actions/docker-setup
+
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
           make -j$(nproc) out/${{ matrix.target }}
-      - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
-        with:
-          name: ${{ matrix.target }}
-          path: out/${{ matrix.target }}
-          retention-days: 1
 
-  upload_to_ecr:
-    name: Upload toolchain artifacts to ECR
-    # We use a special group that is configured to use github largest runner instance
-    # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
-    runs-on:
-      group: ubuntu-runners
-    needs:
-      - build
-    permissions:
-      id-token: write
-      contents: read
-    steps:
+      - name: Run `make ${{ matrix.target }}`
+        shell: 'script -q -e -c "bash {0}"'
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+          make -j$(nproc) out/${{ matrix.target }}/index.json
+
+      - name: upload to GHCR
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
+          env -C out/${{ matrix.target }} tar -cf - . | docker load
+
+          for tag in ${tags}; do
+              docker tag "qos-local/${{ matrix.target }}:latest" "ghcr.io/tkhq/${{ matrix.target }}:${tag}"
+          done
+
+          docker image push --all-tags ghcr.io/tkhq/${{ matrix.target }}
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::799078726966:role/github-mono
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
@@ -64,72 +73,28 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
 
-      - name: Download Artifacts
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-
-      - name: Upload images to ECR
-        env:
-          images: >-
-            qos_client
-            qos_enclave
-            qos_host
-            enclave_reshard
-          tags: >-
-            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
-            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
-            ${{ github.event_name == 'push' && github.ref_name || '' }}
+      - name: Upload to ECR
+        shell: 'script -q -e -c "bash {0}"'
         run: |
-          skopeo login \
-            --username "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
-            --password "${{ steps.login-ecr.outputs.docker_password_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
-            ${{ steps.login-ecr.outputs.registry }}
-          for image in ${images}; do
-            skopeo copy --all --dest-decompress \
-              "oci-archive:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
-              "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
-            for tag in ${tags}; do
-              skopeo copy --all \
-                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
-                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:${tag}"
-            done
+          echo "${{ steps.login-ecr.outputs.docker_password_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" | \
+            docker login \
+            ${{ steps.login-ecr.outputs.registry }} \
+            -u "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
+            --password-stdin
+
+          export BASE_IMAGE_NAME="${{ steps.login-ecr.outputs.registry }}/tkhq/${{ matrix.target }}"
+          export IMAGE_NAME="${BASE_IMAGE_NAME}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+          export DIGEST_FILE=/tmp/image-digest-${{ matrix.target }}.sha256
+
+          cat out/${{ matrix.target }}/index.json | jq -r .manifests[].digest > "${DIGEST_FILE}"
+
+          docker tag "qos-local/${{ matrix.target }}:latest" "$IMAGE_NAME"
+
+          for tag in ${tags}; do
+            docker tag "$IMAGE_NAME" "$BASE_IMAGE_NAME:${tag}"
           done
 
-  upload_to_ghcr:
-    name: Upload toolchain artifacts to GHCR
-    # We use a special group that is configured to use github largest runner instance
-    # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
-    runs-on:
-      group: ubuntu-runners
-    needs:
-      - build
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-      - name: Upload images to GHCR
-        env:
-          images: >-
-            qos_client
-            qos_enclave
-            qos_host
-          tags: >-
-            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
-            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
-            ${{ github.event_name == 'push' && github.ref_name || '' }}
-        run: |
-          skopeo login \
-            --username "${{ github.actor }}" \
-            --password "${{ secrets.GITHUB_TOKEN }}" \
-            ghcr.io
-          for image in ${images}; do
-            skopeo copy --all --dest-decompress \
-              "oci-archive:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
-              "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
-            for tag in ${tags}; do
-              skopeo copy --all \
-                "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
-                "docker://ghcr.io/tkhq/${image}:${tag}"
-            done
-          done
+          docker image push --all-tags "$BASE_IMAGE_NAME"
+
+          echo "Uploaded image $IMAGE_NAME (SHA-256 digest: $(cat $DIGEST_FILE))"
+
