--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on:
       group: ubuntu-runners
     strategy:
+      fail-fast: false
       matrix:
         include:
           - target: qos_client
