--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -6,12 +6,13 @@ members = [
   "qos_crypto",
   "qos_host",
   "qos_hex",
+  "qos_net",
   "qos_test_primitives",
   "qos_p256",
   "qos_nsm",
 ]
 exclude = ["init", "qos_aws", "qos_system", "toolchain","qos_enclave", "eif_build"]
-# We need this to avoid issues with the mock feature uinintentionally being
+# We need this to avoid issues with the mock feature unintentionally being
 # enabled just because some tests need it.
 # https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
 resolver = "2"
