--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -23,6 +23,8 @@ rand = { version = "0.8.5", default-features = false }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
+rustls = { version = "0.23.5" }
+webpki-roots = { version = "0.26.1" }
 
 [features]
 # Support for VSOCK
