revert container file

--- a/src/images/common/Containerfile
+++ b/src/images/common/Containerfile
@@ -1,35 +1,35 @@
-FROM stagex/bash:sx2024.04.2@sha256:6972f21bb1e1828d875c5adef57a979e97cf2487a55f454920ee43682731aa43 AS bash
-FROM stagex/binutils:sx2024.04.2@sha256:311f8c2bd2b586bf7210c40dde43d0e0d5e76af4e1e688ad129f945691e3e105 AS binutils
-FROM stagex/ca-certificates:sx2024.04.2@sha256:f9fe6e67df91083fee3d88cf221f84ef77f0b67480fb5b0689e890509a712533 AS ca-certificates
-FROM stagex/coreutils:sx2024.04.2@sha256:6c02453e989104f475b606566e90f8abf71a9c2d591c91708c25b30a80b966d9 AS coreutils
-FROM stagex/eif_build:sx2024.04.2@sha256:adf4c5293906b720fe39912207871872e89170eede20c95de05ea44e0a7ce2ae AS eif_build
-FROM stagex/file:sx2024.04.2@sha256:fc3e7e06ae03aec2e969d90d80279f468de7861751abee7169ca285a54482570 AS file
-FROM stagex/filesystem:sx2024.04.2@sha256:c504b17edae1bea8c139d058b20bebd383a0be1b4f57565d92cb578012f9c0f8 AS filesystem
-FROM stagex/findutils:sx2024.04.2@sha256:43a6ae4b35574b1e36b2e95fc47eecc8b4d0f176f435e21259dbdf59d1c3f17d AS findutils
-FROM stagex/gcc:sx2024.04.2@sha256:c67989de74d82eddeaf0d458edb1ca35b88064d3a66d5631c3530d5f10975f5e AS gcc
-FROM stagex/gen_initramfs:sx2024.04.2@sha256:32f4993001fe799352b5fc12d79acc7b6bf746451557e924fd498e69a5270e1f AS gen_initramfs
-FROM stagex/git:sx2024.04.2@sha256:16dc35c005f8e6cab3a20f116ce9ab7ea09c18d554f818f932a4fb3c44c90fdb AS git
-FROM stagex/grep:sx2024.04.2@sha256:1a81d8d427b6ad73bd9243fe4031c12e66128bd4c2013132180a49e9034310ae AS grep
-FROM stagex/libunwind:sx2024.04.2@sha256:622bbc0bcd502d349624fe90bd3cfc63595a71d450702d4e746abf8918351e2b AS libunwind
-FROM stagex/linux-nitro:sx2024.04.2@sha256:3dd38f1acd01fa9c36eac432dc036c28149e1510be95c9538c7a66bf2ca9ac00 AS linux-nitro
-FROM stagex/llvm13:sx2024.04.2@sha256:780b11314eaf2724e2ae84e7f84255a2d0ab6d3cd0e216707a2bbc27e6c7c6ff AS llvm13
-FROM stagex/llvm:sx2024.04.2@sha256:ae430dbdd1a6d546bb8aef817d09d3fb4e0145f81c071647666b7a9f7b69f8a1 AS llvm
-FROM stagex/musl-fts:sx2024.04.2@sha256:5d815d099ccd6ebd5be9e24d96b303c1f2a36cc82fc82e3edf3602c1b50d424d AS musl-fts
-FROM stagex/musl:sx2024.04.2@sha256:f888fcf45fabaaae3d0268bcec902ceb94edba7bf8d09ef6966ebb20e00b7127 AS musl
-FROM stagex/musl-obstack:sx2024.04.2@sha256:9314fdf086b3663833c7df453a7aa1cd5832330a275939ceb39c0ab987e96088 AS musl-obstack
-FROM stagex/openssl:sx2024.04.2@sha256:e719432f169a5ff606f52004a554e58780335f9635b1cf271d002ca7b1d1a206 AS openssl
-FROM stagex/pcsc-lite:sx2024.04.2@sha256:be32e4ce71660ed0df3880bf536412c2bd598ba61464edbea86969a62eb41df5 AS pcsc-lite
-FROM stagex/pkgconf:sx2024.04.2@sha256:31ce4eddaf4e777ddb51f01923089f3321ec5272ca0aa834d475f644279209b8 AS pkgconf
-FROM stagex/rust:sx2024.04.2@sha256:e7882823078d49da4302578526dc35d6b2afad7507740c2f9bcd406a79befbc9 AS rust
-FROM stagex/zlib:sx2024.04.2@sha256:d5b923b8f1b0382b8bdde96f36c0b8b9f694c97b14a9071bd96f2ffc46124e03 AS zlib
+FROM stagex/bash:sx2024.03.0@sha256:d1cbbb56847e6b1e7b879214aa6926b6fdfa210e9b42a2f612a6aea850ddeefc AS bash
+FROM stagex/binutils:sx2024.03.0@sha256:3af41227e1fe6a8f9b3df9916ef4876840f33eaa172168e1db1d8f457ba011d5 AS binutils
+FROM stagex/ca-certificates:sx2024.03.0@sha256:6746d2d203be3455bfc5ffd5a051c8edb73ecfd7be77c3da5a2973003a30794f AS ca-certificates
+FROM stagex/coreutils:sx2024.03.0@sha256:cf4032ca6b5f912a8b9d572d527d388401b68a0c9224cc086173e46bc4e1eabe AS coreutils
+FROM stagex/eif_build:sx2024.03.0@sha256:6f3fed0aeaf9f9eebb43a370a5495fab92fcb21119fc23e261f0f24e1174009c AS eif_build
+FROM stagex/file:sx2024.03.0@sha256:7fd68d1e7d5e1d3b1e52433bb6709f28d3e362ea89c9e13586b852ca0412f640 AS file
+FROM stagex/filesystem:sx2024.03.0@sha256:42c8353db508ac79599df38c684502e50167352de2cddc5aea9b89486e7f8498 AS filesystem
+FROM stagex/findutils:sx2024.03.0@sha256:475ea3488840297454f0f20b58e1b8292bf9b3944f901e3fce432fa4afeaa4cd AS findutils
+FROM stagex/gcc:sx2024.03.0@sha256:25798fdde278a9f1f27e4092a1668e93d2766d4f8b089fba38d4684b20a9b0f7 AS gcc
+FROM stagex/gen_initramfs:sx2024.03.0@sha256:a51c840a1c82dbc00c0a813964195d4f4bcb20463701083999320f826ffa49bf AS gen_initramfs
+FROM stagex/git:sx2024.03.0@sha256:2c11f2daf9b8c1738cbd966b6de5dd0bcfaf81b675c2d268d30f972ddab9d9df AS git
+FROM stagex/grep:sx2024.03.0@sha256:589465adc0125128c21534eb560299c335a41935e0ce182a632f4b739bf25c60 AS grep
+FROM stagex/libunwind:sx2024.03.0@sha256:e74819e47c79f68a008302927ef02a5aa39cf12e859a8dfeccf9d1b4769b4833 AS libunwind
+FROM stagex/linux-nitro:sx2024.03.0@sha256:073c4603686e3bdc0ed6755fee3203f6f6f1512e0ded09eaea8866b002b04264 AS linux-nitro
+FROM stagex/llvm13:sx2024.03.0@sha256:97d0f3d32f58dca648cd70b0d58364d9bea5170bb99054c0a0b19ef57a7da7b1 AS llvm13
+FROM stagex/llvm:sx2024.03.0@sha256:8e361f1da92e956d947e37b6fc0a3951fcc1130863e2d3a9b4fca40ab4fd07f6 AS llvm
+FROM stagex/musl-fts:sx2024.03.0@sha256:73c3c4647010f7151c711ed5005ef946c7c1a19c6e8921e057b5dbc15ef9559a AS musl-fts
+FROM stagex/musl:sx2024.03.0@sha256:7db05e6817058a512a66ea82f3b99163069424c281363c2e9a48091d0d1d3bd9 AS musl
+FROM stagex/musl-obstack:sx2024.03.0@sha256:4b6737815460908f666fa7a8e91138610d0a0909c408165a575ffb42bf21cd66 AS musl-obstack
+FROM stagex/openssl:sx2024.03.0@sha256:1a2f656ced34d1ade99279c5663fcf0ec4f6526bcc50142079ef8adc080be3a9 AS openssl
+FROM stagex/pcsc-lite:sx2024.03.0@sha256:e720e1795706c7c8c1db14bf730b10521e3ff42e4bed90addc590f7446aac8af AS pcsc-lite
+FROM stagex/pkgconf:sx2024.03.0@sha256:31ce4eddaf4e777ddb51f01923089f3321ec5272ca0aa834d475f644279209b8 AS pkgconf
+FROM stagex/rust:sx2024.03.0@sha256:fe22a0fcdb569cb70b8147378463fb6ff800e642be9d50542f8e25a38d90ec7f AS rust
+FROM stagex/zlib:sx2024.03.0@sha256:de8f56f3ece28b14d575329bead53fc5318962ae3cb8f161a2d69710f7ec51f4 AS zlib
 
 FROM scratch as base
 ENV TARGET=x86_64-unknown-linux-musl
 ENV RUSTFLAGS="-C target-feature=+crt-static"
 ENV CARGOFLAGS="--locked --no-default-features --release --target ${TARGET}"
 ENV OPENSSL_STATIC=true
-COPY --from=busybox . /
-COPY --from=bash . /
+COPY --from=stagex/busybox . /
+COPY --from=stagex/bash . /
 COPY --from=coreutils . /
 COPY --from=findutils . /
 COPY --from=grep . /
