--- a/src/qos_crypto/Cargo.toml
+++ b/src/qos_crypto/Cargo.toml
@@ -9,6 +9,8 @@ publish = false
 [dependencies]
 sha2 = { version = "0.10", default-features = false }
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
+vsss-rs = { version = "4.3", default-features = false, features = ["std"] }
+rand_core = { version = "0.6.4", default-features = false }
 
 [dev-dependencies]
 qos_hex = { path = "../qos_hex" }
