--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -15,12 +15,12 @@ qos_p256 = { path = "../qos_p256", features = ["mock"] }
 qos_test_primitives = { path = "../qos_test_primitives" }
 
 tokio = { version = "1.33", features = ["macros", "rt-multi-thread"], default-features = false }
-borsh = { version = "0.10" }
+borsh = { version = "1.0", features = ["derive"] }
 nix = { version = "0.26", features = ["socket"], default-features = false }
 
 [dev-dependencies]
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
-borsh = { version = "0.10" }
+borsh = { version = "1.0", features = ["derive"] }
 aws-nitro-enclaves-nsm-api = { version = "0.3", default-features = false }
 rand = "0.8"
 ureq = { version = "2.9", features = ["json"], default-features = false }
