--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -11,7 +11,7 @@ qos_hex = { path = "../qos_hex", features = ["serde"], default-features = false 
 # Third party
 axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-features = false }
 tokio = { version = "1.33", features = ["macros", "rt-multi-thread"], default-features = false }
-borsh = { version = "0.10" }
+borsh = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1" }
 serde = { version = "1", features = ["derive"], default-features = false }
 
