--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 qos_core = { path = "../qos_core", default-features = false }
 
-borsh = { version = "0.10" }
+borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
 serde = { version = "1", features = ["derive"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"], default-features = false, optional = true}
 rand = { version = "0.8.5", default-features = false, optional = true }
