--- a/src/images/benchmarking/Containerfile
+++ b/src/images/benchmarking/Containerfile
@@ -1,16 +1,17 @@
 ARG BASE_IMAGE=common
-
 FROM ${BASE_IMAGE} as base_image
 FROM common as base
 
-FROM base as build-benchmarking
 ADD . /src
-ARG BASE_IMAGE
-RUN <<-EOF
+
+FROM base as build-benchmarking
+RUN <<-'EOF'
 	set -eux
 	env -C /src/benchmarking cargo build ${CARGOFLAGS}
 	cp /src/benchmarking/target/${TARGET}/release/benchmarking /
-	file /benchmarking/${BASE_IMAGE} | grep "static-pie"
+	file /benchmarking | grep "static-pie"
 EOF
 
-ENTRYPOINT ["/benchmark"]
+FROM scratch as package
+COPY --from=build-benchmarking /benchmarking .
+ENTRYPOINT ["/benchmarking"]
