--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -14,6 +14,9 @@ rand = { version = "0.8.5", default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
+httparse = { version = "1.9.4", default-features = false }
+chunked_transfer = { version = "1.5.0", default-features = false }
+serde_json = { version = "1.0.121", features = ["std"], default-features = false }
 rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
