--- a/src/qos_net/Cargo.toml
+++ b/src/qos_net/Cargo.toml
@@ -7,19 +7,27 @@ publish = false
 [dependencies]
 qos_core = { path = "../qos_core", default-features = false }
 
-borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
+borsh = { version = "1.0", features = [
+    "std",
+    "derive",
+], default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
-hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"], default-features = false, optional = true}
+hickory-resolver = { version = "0.24.1", features = [
+    "tokio-runtime",
+], default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
 httparse = { version = "1.9.4", default-features = false }
 chunked_transfer = { version = "1.5.0", default-features = false }
-serde_json = { version = "1.0.121", features = ["std"], default-features = false }
+serde_json = { version = "1.0.121", features = [
+    "std",
+], default-features = false }
 rustls = { version = "0.23.5" }
 webpki-roots = { version = "0.26.1" }
 
 [features]
-default = ["proxy"] # keep this as a default feature ensures we lint by default
+default = ["proxy"]                  # keep this as a default feature ensures we lint by default
 proxy = ["rand", "hickory-resolver"]
+vm = []
