--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           mkdir -p ~/.ssh/
           echo "$REPROS_KEY" > ~/.ssh/repros.key
-          sha256sum ~/.ssh/repros.key
+          echo "Using key: ~/.ssh/repros.key"
+          ssh-keygen -l -f "~/.ssh/repros.key"
           cat >>~/.ssh/config <<-END
             Host lance-repros
                 HostName ${{matrix.host}}
