sanity check ssh keyfile

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run `make`
         run: |
           mkdir -p ~/.ssh/
-          echo "$REPROS_KEY" > ~/.ssh/repros.key
+          echo "${{ secrets.REPROS_KEY }}" > ~/.ssh/repros.key
           echo "Using key: ~/.ssh/repros.key"
           ssh-keygen -l -f "~/.ssh/repros.key"
           cat >>~/.ssh/config <<-END
@@ -51,5 +51,3 @@ jobs:
           ssh-keyscan -H ${{matrix.host}} >> ~/.ssh/known_hosts
           git remote add repros-lance git@${{matrix.host}}:qos
           git push repros-lance HEAD
-        env:
-          REPROS_KEY: ${{ secrets.REPROS_KEY }}
