--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -48,7 +48,7 @@ jobs:
           END
           echo "Using key: ~/.ssh/repros.key"
           ls -Rlah ~/.ssh/
-          ssh-keygen -l -f "~/.ssh/repros.key"
+          ssh-keygen -l -f /home/runner/.ssh/repros.key
           ssh-keyscan -H ${{matrix.host}} >> ~/.ssh/known_hosts
           git remote add repros-lance git@${{matrix.host}}:qos
           git push repros-lance HEAD
