sanity check ssh keyfile

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -42,15 +42,14 @@ jobs:
           echo "${{ secrets.REPROS_KEY }}" > ~/.ssh/repros.key
           chmod 600 ~/.ssh/repros.key
           cat >>~/.ssh/config <<-END
-            Host lance-repros
+            Host $${{matrix.host}}
                 HostName ${{matrix.host}}
                 User git
                 IdentityFile ~/.ssh/repros.key
                 StrictHostKeyChecking no
           END
           echo "Using key: ~/.ssh/repros.key"
-          ls -Rlah ~/.ssh/
           ssh-keygen -l -f /home/runner/.ssh/repros.key
           ssh-keyscan -H ${{matrix.host}} >> ~/.ssh/known_hosts
           git remote add repros-lance git@${{matrix.host}}:qos
-          git push repros-lance HEAD
+          ssh-agent sh -c "ssh-add ~/.ssh/repros.key && git push repros-lance HEAD
