Change workflow name to StageX build for consistency with mono

--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -1,4 +1,4 @@
-name: artifacts-build
+name: stagex-build
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: build artifacts
+    name: build StageX artifacts
     # We use a special group that is configured to use github largest runner instance
     # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
     runs-on:
