Fix Makefile to call the same lints, remove old helper script which does not compile

--- a/src/Makefile
+++ b/src/Makefile
@@ -144,6 +144,10 @@ lint:
 
 .PHONY: clippy
 clippy:
+	cargo clippy -- -D warnings
+
+.PHONY: clippy-fix
+clippy-fix:
 	cargo clippy --fix --allow-dirty
 
 .PHONY: fmt
