--- a/src/rustfmt.toml
+++ b/src/rustfmt.toml
@@ -6,13 +6,15 @@ tab_spaces = 4
 
 # Line wrapping
 use_small_heuristics = "Max"
-wrap_comments = true
 max_width = 80
+# Not a stable feature yet, can't use consistently on StageX builds
+# wrap_comments = true
 
 # Imports
-imports_granularity = "Crate"
 reorder_imports = true
-group_imports = "StdExternalCrate"
+# Not a stable feature yet, can't use consistently on StageX builds
+# imports_granularity = "Crate"
+# group_imports = "StdExternalCrate"
 
 # Random
 use_field_init_shorthand = true
