Add cargo-fuzz test harnesses for the qos_crypto crate shamir functionality

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -11,8 +11,16 @@ members = [
   "qos_p256",
   "qos_nsm",
 ]
-exclude = ["init", "qos_aws", "qos_system", "qos_enclave", "eif_build"]
-# We need this to avoid issues with the mock feature unintentionally being
+exclude = [
+  "init",
+  "qos_aws",
+  "qos_system",
+  "qos_enclave",
+  "eif_build",
+  "qos_p256/fuzz",
+  "qos_crypto/fuzz",
+]
+# We need this to avoid issues with the mock feature uinintentionally being
 # enabled just because some tests need it.
 # https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
 resolver = "2"
