--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -13,7 +13,7 @@ qos_nsm = { path = "../qos_nsm", default-features = false }
 nix = { version = "0.26", features = ["socket"], default-features = false }
 libc = "=0.2.149"
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
-vsss-rs = { version = "4.3", default-features = false, features = ["std"] }
+vsss-rs = { version = "5.1", default-features = false, features = ["std", "zeroize"] }
 
 # For AWS Nitro
 aws-nitro-enclaves-nsm-api = { version = "0.3", default-features = false }
