--- a/src/qos_crypto/Cargo.toml
+++ b/src/qos_crypto/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 [dependencies]
 sha2 = { version = "0.10", default-features = false }
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
-vsss-rs = { version = "4.3", default-features = false, features = ["std"] }
+vsss-rs = { version = "5.1", default-features = false, features = ["std", "zeroize"] }
 rand_core = { version = "0.6.4", default-features = false }
 thiserror = "1.0.63"
 
