--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -21,8 +21,8 @@ aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 serde = { version = "1", features = ["derive"], default-features = false }
 
-tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }
-tokio-vsock = { version = "0.7.1", default-features = false }
+tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"], default-features = false }
+tokio-vsock = { version = "0.7.1", optional = true }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
@@ -33,6 +33,6 @@ webpki-roots = { version = "0.26.1" }
 
 [features]
 # Support for VSOCK
-vm = []
+vm = ["tokio-vsock"]
 # Never use in production - support for mock NSM
 mock = ["qos_nsm/mock"]
